--- a/mbaas-login/pom.xml
+++ b/mbaas-login/pom.xml
@@ -35,6 +35,7 @@
     </properties>
 
     <build>
+        <finalName>mbaas-login</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.felix</groupId>
