--- a/mbaas-velocity/pom.xml
+++ b/mbaas-velocity/pom.xml
@@ -44,8 +44,9 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>org.apache.velocity.Template</Export-Package>
-                        <Export-Package>org.apache.velocity.app.Velocity</Export-Package>
+                        <Export-Package>org.apache.velocity</Export-Package>
+                        <Export-Package>org.apache.velocity.app</Export-Package>
+                        <Export-Package>org.apache.velocity.app.context</Export-Package>
                         <Import-Package>
                             !antlr,
                             !antlr.collections.impl,
@@ -147,71 +148,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.maven</groupId>-->
-            <!--<artifactId>maven-ant-tasks</artifactId>-->
-            <!--<version>2.1.3</version>-->
-            <!--<scope>compile</scope>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.ant</groupId>-->
-                    <!--<artifactId>ant</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>classworlds</groupId>-->
-                    <!--<artifactId>classworlds</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.codehaus.plexus</groupId>-->
-                    <!--<artifactId>plexus-container-default</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.codehaus.plexus</groupId>-->
-                    <!--<artifactId>plexus-utils</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.codehaus.plexus</groupId>-->
-                    <!--<artifactId>plexus-interpolation</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven</groupId>-->
-                    <!--<artifactId>maven-artifact</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven</groupId>-->
-                    <!--<artifactId>maven-artifact-manager</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven</groupId>-->
-                    <!--<artifactId>maven-model</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven</groupId>-->
-                    <!--<artifactId>maven-project</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven</groupId>-->
-                    <!--<artifactId>maven-error-diagnostics</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven</groupId>-->
-                    <!--<artifactId>maven-settings</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven.wagon</groupId>-->
-                    <!--<artifactId>wagon-file</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven.wagon</groupId>-->
-                    <!--<artifactId>wagon-http-lightweight</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.maven.wagon</groupId>-->
-                    <!--<artifactId>wagon-provider-api</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>logkit</groupId>
