--- a/mbaas-servlet/pom.xml
+++ b/mbaas-servlet/pom.xml
@@ -115,5 +115,11 @@
             <version>3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 </project>
