--- a/mbaas-digester/pom.xml
+++ b/mbaas-digester/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.angkorteam.mbaas</groupId>
     <artifactId>mbaas-digester</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>bundle</packaging>
 
     <name>mbaas-digester</name>
@@ -47,6 +47,9 @@
                         <Export-Package>
                             org.apache.commons.digester;
                         </Export-Package>
+                        <Import-Package>
+                            org.apache.commons.beanutils;
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -58,19 +61,7 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-beanutils</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi.core</artifactId>
-            <version>6.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
-            <version>6.0.0</version>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
