--- a/mbaas-openshop/pom.xml
+++ b/mbaas-openshop/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.angkorteam.mbaas</groupId>
     <artifactId>mbaas-openshop</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>bundle</packaging>
 
     <name>mbaas-openshop</name>
@@ -45,6 +45,23 @@
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.angkorteam.mbaas.openshop.internal.BundleActivator</Bundle-Activator>
+                        <Export-Package>
+                            org.angkorteam.mbaas.openshop.block;
+                            org.angkorteam.mbaas.openshop.controller;
+                            org.angkorteam.mbaas.openshop.layout;
+                            org.angkorteam.mbaas.openshop.page;
+                            org.angkorteam.mbaas.openshop.validator;
+                        </Export-Package>
+                        <Private-Package>
+                            org.angkorteam.mbaas.openshop.internal;
+                        </Private-Package>
+                        <Import-Package>
+                            org.angkorteam.mbaas.servlet;
+                            org.apache.velocity;
+                            org.osgi.framework;
+                            org.apache.commons.validator;
+                            javax.servlet.http;
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -56,7 +73,7 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-servlet</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
@@ -64,6 +81,7 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>osgi.core</artifactId>
@@ -71,43 +89,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
-            <version>6.0.0</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.12</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.5</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>20.0</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.5</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-validator</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
