--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>mbaas</name>
+
     <groupId>org.angkorteam.mbaas</groupId>
     <artifactId>mbaas-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <name>mbaas</name>
     <packaging>pom</packaging>
 
     <modules>
