--- a/mbaas-servlet/pom.xml
+++ b/mbaas-servlet/pom.xml
@@ -51,10 +51,12 @@
                         <Import-Package>
                             com.google.common.collect;
                             org.apache.velocity;
+                            org.apache.commons.lang3;
                             org.osgi.framework;
                             javax.servlet;
                             org.osgi.service.jdbc;
                             org.apache.commons.io;
+                            org.slf4j;
                             org.apache.commons.fileupload;
                         </Import-Package>
                         <Private-Package>
@@ -89,7 +91,17 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-velocity</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -108,6 +120,18 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
         </dependency>
 
     </dependencies>
