--- a/mbaas-digester/pom.xml
+++ b/mbaas-digester/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.angkorteam.mbaas</groupId>
     <artifactId>mbaas-digester</artifactId>
-    <version>1.0</version>
+    <version>5.0.5</version>
     <packaging>bundle</packaging>
 
     <name>mbaas-digester</name>
@@ -46,6 +46,19 @@
                     <instructions>
                         <Export-Package>
                             org.apache.commons.digester;
+                            org.apache.commons.digester.annotations;
+                            org.apache.commons.digester.annotations.handlers;
+                            org.apache.commons.digester.annotations.internal;
+                            org.apache.commons.digester.annotations.providers;
+                            org.apache.commons.digester.annotations.reflect;
+                            org.apache.commons.digester.annotations.rules;
+                            org.apache.commons.digester.annotations.spi;
+                            org.apache.commons.digester.annotations.utils;
+                            org.apache.commons.digester.parser;
+                            org.apache.commons.digester.plugins;
+                            org.apache.commons.digester.plugins.strategies;
+                            org.apache.commons.digester.substitution;
+                            org.apache.commons.digester.xmlrules;
                         </Export-Package>
                         <Import-Package>
                             org.apache.commons.beanutils;
@@ -61,7 +74,7 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-beanutils</artifactId>
-            <version>1.0</version>
+            <version>5.0.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.angkorteam.mbaas</groupId>
