--- a/mbaas-openshop/pom.xml
+++ b/mbaas-openshop/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.angkorteam.mbaas</groupId>
     <artifactId>mbaas-openshop</artifactId>
-    <version>1.0</version>
+    <version>5.0.5</version>
     <packaging>bundle</packaging>
 
     <name>mbaas-openshop</name>
@@ -56,13 +56,46 @@
                             org.angkorteam.mbaas.openshop.internal;
                         </Private-Package>
                         <Import-Package>
+                            org.apache.commons.collections4.comparators;
+                            org.apache.commons.beanutils;
                             com.google.common.base;
                             com.google.common.collect;
                             org.angkorteam.mbaas.servlet;
-                            org.apache.velocity;
                             org.osgi.framework;
-                            org.apache.commons.validator;
                             javax.servlet.http;
+                            org.xml.sax;
+                            org.apache.commons.digester;
+                            org.apache.commons.digester.annotations;
+                            org.apache.commons.digester.annotations.handlers;
+                            org.apache.commons.digester.annotations.internal;
+                            org.apache.commons.digester.annotations.providers;
+                            org.apache.commons.digester.annotations.reflect;
+                            org.apache.commons.digester.annotations.rules;
+                            org.apache.commons.digester.annotations.spi;
+                            org.apache.commons.digester.annotations.utils;
+                            org.apache.commons.digester.parser;
+                            org.apache.commons.digester.plugins;
+                            org.apache.commons.digester.plugins.strategies;
+                            org.apache.commons.digester.substitution;
+                            org.apache.commons.digester.xmlrules;
+                            org.apache.commons.validator;
+                            org.apache.commons.validator.util;
+                            org.apache.commons.validator.routines;
+                            org.apache.commons.validator.routines.checkdigit;
+                            org.apache.velocity;
+                            org.apache.velocity.app;
+                            org.apache.velocity.context;
+                            org.apache.velocity.exception;
+                            org.apache.velocity.runtime;
+                            org.apache.velocity.runtime.resource;
+                            org.apache.velocity.util.introspection;
+                            org.apache.velocity.app.event;
+                            org.apache.velocity.runtime.parser;
+                            org.apache.velocity.util;
+                            org.apache.velocity.runtime.parser.node;
+                            org.apache.velocity.runtime.directive;
+                            org.apache.velocity.runtime.resource.loader;
+                            org.apache.velocity.runtime.resource.util;
                         </Import-Package>
                     </instructions>
                 </configuration>
@@ -75,7 +108,7 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-servlet</artifactId>
-            <version>1.0</version>
+            <version>5.0.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.osgi</groupId>
@@ -115,7 +148,7 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-velocity</artifactId>
-            <version>1.0</version>
+            <version>5.0.5</version>
         </dependency>
 
         <dependency>
@@ -126,8 +159,26 @@
 
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
+            <artifactId>mbaas-digester</artifactId>
+            <version>5.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.angkorteam.mbaas</groupId>
+            <artifactId>mbaas-collections</artifactId>
+            <version>5.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.angkorteam.mbaas</groupId>
+            <artifactId>mbaas-beanutils</artifactId>
+            <version>5.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-validator</artifactId>
-            <version>1.0</version>
+            <version>5.0.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.angkorteam.mbaas</groupId>
