--- a/mbaas-servlet/pom.xml
+++ b/mbaas-servlet/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.angkorteam.mbaas</groupId>
     <artifactId>mbaas-servlet</artifactId>
-    <version>1.0</version>
+    <version>5.0.5</version>
     <packaging>bundle</packaging>
 
     <name>mbaas-servlet</name>
@@ -49,15 +49,50 @@
                             org.angkorteam.mbaas.servlet;
                         </Export-Package>
                         <Import-Package>
-                            com.google.common.collect;
-                            org.apache.velocity;
-                            org.apache.commons.lang3;
-                            org.osgi.framework;
-                            javax.servlet;
-                            org.osgi.service.jdbc;
-                            org.apache.commons.io;
                             org.slf4j;
+                            org.osgi.framework;
+                            org.osgi.service.jdbc;
+                            com.google.common.base;
+                            com.google.common.collect;
+                            org.apache.commons.lang3;
+                            javax.servlet;
+                            javax.sql;
+                            javax.servlet.http;
+                            org.apache.commons.io;
                             org.apache.commons.fileupload;
+                            org.apache.commons.fileupload.disk;
+                            org.apache.velocity;
+                            org.apache.velocity.app;
+                            org.apache.velocity.context;
+                            org.apache.velocity.exception;
+                            org.apache.velocity.runtime;
+                            org.apache.velocity.runtime.resource;
+                            org.apache.velocity.util.introspection;
+                            org.apache.velocity.app.event;
+                            org.apache.velocity.runtime.parser;
+                            org.apache.velocity.util;
+                            org.apache.velocity.runtime.parser.node;
+                            org.apache.velocity.runtime.directive;
+                            org.apache.velocity.runtime.resource.loader;
+                            org.apache.velocity.runtime.resource.util;
+                            org.apache.commons.digester;
+                            org.apache.commons.digester.annotations;
+                            org.apache.commons.digester.annotations.handlers;
+                            org.apache.commons.digester.annotations.internal;
+                            org.apache.commons.digester.annotations.providers;
+                            org.apache.commons.digester.annotations.reflect;
+                            org.apache.commons.digester.annotations.rules;
+                            org.apache.commons.digester.annotations.spi;
+                            org.apache.commons.digester.annotations.utils;
+                            org.apache.commons.digester.parser;
+                            org.apache.commons.digester.plugins;
+                            org.apache.commons.digester.plugins.strategies;
+                            org.apache.commons.digester.substitution;
+                            org.apache.commons.digester.xmlrules;
+                            org.apache.commons.validator;
+                            org.apache.commons.validator.util;
+                            org.apache.commons.validator.routines;
+                            org.apache.commons.validator.routines.checkdigit;
                         </Import-Package>
                         <Private-Package>
                             org.angkorteam.mbaas.servlet.internal;
@@ -91,7 +126,7 @@
         <dependency>
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-velocity</artifactId>
-            <version>1.0</version>
+            <version>5.0.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -102,6 +137,24 @@
                     <artifactId>commons-lang3</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.angkorteam.mbaas</groupId>
+            <artifactId>mbaas-digester</artifactId>
+            <version>5.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.angkorteam.mbaas</groupId>
+            <artifactId>mbaas-beanutils</artifactId>
+            <version>5.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.angkorteam.mbaas</groupId>
+            <artifactId>mbaas-collections</artifactId>
+            <version>5.0.5</version>
         </dependency>
 
         <dependency>
