--- a/mbaas-adminlte/pom.xml
+++ b/mbaas-adminlte/pom.xml
@@ -32,6 +32,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <bundle.namespace>org.angkorteam.mbaas.adminlte</bundle.namespace>
     </properties>
 
     <build>
@@ -45,15 +46,8 @@
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.angkorteam.mbaas.adminlte.internal.BundleActivator</Bundle-Activator>
-                        <Import-Package>
-                            org.angkorteam.mbaas.servlet;
-                            org.osgi.framework;
-                        </Import-Package>
-                        <Export-Package>
-                        </Export-Package>
-                        <Private-Package>
-                            org.angkorteam.mbaas.adminlte.internal;
-                        </Private-Package>
+                        <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
+                        <Private-Package>${bundle.namespace}.internal.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -66,32 +60,6 @@
             <groupId>org.angkorteam.mbaas</groupId>
             <artifactId>mbaas-servlet</artifactId>
             <version>5.0.5</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.osgi</groupId>
-                    <artifactId>osgi.cmpn</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.angkorteam.mbaas</groupId>
-                    <artifactId>mbaas-velocity</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>commons-io</groupId>
-                    <artifactId>commons-io</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>commons-fileupload</groupId>
-                    <artifactId>commons-fileupload</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>javax.servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
