--- a/mbaas-beanutils/pom.xml
+++ b/mbaas-beanutils/pom.xml
@@ -32,6 +32,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <bundle.namespace>org.apache.commons.beanutils</bundle.namespace>
     </properties>
 
     <build>
@@ -44,14 +45,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>
-                            org.apache.commons.beanutils;
-                            org.apache.commons.beanutils.expression;
-                        </Export-Package>
-                        <Import-Package>
-                            org.apache.commons.collections4.comparators;
-                            org.apache.commons.collections4;
-                        </Import-Package>
+                        <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
+                        <Private-Package>${bundle.namespace}.internal.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
