--- a/mbaas-collections/pom.xml
+++ b/mbaas-collections/pom.xml
@@ -32,6 +32,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <bundle.namespace>org.apache.commons.collections4</bundle.namespace>
     </properties>
 
     <build>
@@ -44,17 +45,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>
-                            org.apache.commons.collections4;
-                            org.apache.commons.collections4.map;
-                            org.apache.commons.collections4.iterators;
-                            org.apache.commons.collections4.set;
-                            org.apache.commons.collections4.keyvalue;
-                            org.apache.commons.collections4.collection;
-                            org.apache.commons.collections4.comparators;
-                        </Export-Package>
-                        <Import-Package>
-                        </Import-Package>
+                        <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
+                        <Private-Package>${bundle.namespace}.internal.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
