--- a/mbaas-validator/pom.xml
+++ b/mbaas-validator/pom.xml
@@ -32,6 +32,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <bundle.namespace>org.apache.commons.validator</bundle.namespace>
     </properties>
 
     <build>
@@ -44,30 +45,9 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>
-                            org.apache.commons.validator;
-                            org.apache.commons.validator.routines;
-                            org.apache.commons.validator.routines.checkdigit;
-                            org.apache.commons.validator.util;
-                        </Export-Package>
-                        <Import-Package>
-                            org.apache.commons.beanutils;
-                            org.apache.commons.collections4;
-                            org.apache.commons.digester;
-                            org.apache.commons.digester.annotations;
-                            org.apache.commons.digester.annotations.handlers;
-                            org.apache.commons.digester.annotations.internal;
-                            org.apache.commons.digester.annotations.providers;
-                            org.apache.commons.digester.annotations.reflect;
-                            org.apache.commons.digester.annotations.rules;
-                            org.apache.commons.digester.annotations.spi;
-                            org.apache.commons.digester.annotations.utils;
-                            org.apache.commons.digester.parser;
-                            org.apache.commons.digester.plugins;
-                            org.apache.commons.digester.plugins.strategies;
-                            org.apache.commons.digester.substitution;
-                            org.apache.commons.digester.xmlrules;
-                        </Import-Package>
+                        <Bundle-Activator>org.apache.commons.validator.internal.BundleActivator</Bundle-Activator>
+                        <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
+                        <Private-Package>${bundle.namespace}.internal.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
